# frodoKem

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: frodo-kem.yml
bench/: safe_oqs.rs
benches/: frodo.rs  safe_oqs.rs
src/: error.rs  hazmat.rs  lib.rs  models.rs  params.rs  traits.rs
src/hazmat/: models.rs  traits.rs
tests/: rng.rs  rsp_reader.rs
